@@ -440,6 +440,29 @@ static int _set_share_node_bitmap(void *x, void *arg)
 	return 0;
 }
 
+static void* _check_node_addr(void *arg)
+{
+	slurm_addr_t slurm_addr;
+	List nodes_to_check = arg;
+	node_record_t *node_ptr;
+
+	while ((node_ptr = list_pop(nodes_to_check))) {
+		slurm_set_addr(&slurm_addr, node_ptr->port,
+			       node_ptr->comm_name);
+		if (slurm_get_port(&slurm_addr))
+			continue;
+
+		error("%s: failure on %s", __func__, node_ptr->comm_name);
+		node_ptr->node_state = NODE_STATE_FUTURE;
+		node_ptr->port = 0;
+		xfree(node_ptr->reason);
+		node_ptr->reason = xstrdup("NO NETWORK ADDRESS FOUND");
+		node_ptr->reason_time = time(NULL);
+		node_ptr->reason_uid = slurm_conf.slurm_user_id;
+	}
+	return NULL;
+}
+
 /*
  * Validate that nodes are addressable.
  */
@@ -447,10 +470,22 @@ static void _validate_slurmd_addr(void)
 {
 #ifndef HAVE_FRONT_END
 	node_record_t *node_ptr;
-	slurm_addr_t slurm_addr;
 	DEF_TIMERS;
-
+	List nodes_to_check = list_create(NULL);
+	pthread_t *work_threads = xcalloc(8, sizeof(pthread_t));
+	int threads_num = 1;
+	char *temp_str;
 	xassert(verify_lock(CONF_LOCK, READ_LOCK));
+
+	if ((temp_str = xstrcasestr(slurm_conf.comm_params,
+				    "ValidateNodeaddrThreads="))) {
+		int tmp_val = strtol(temp_str + 24, NULL, 10);
+		if ((tmp_val >= 0) && (tmp_val <= 16))
+			threads_num = tmp_val;
+		else
+			error("CommunicationParameters option keepalivetime=%d is invalid, ignored",
+			      tmp_val);
+	}
 
 	START_TIMER;
 	for (int i = 0; (node_ptr = next_node(&i)); i++) {
@@ -465,18 +500,19 @@ static void _validate_slurmd_addr(void)
 				continue;
 		if (node_ptr->port == 0)
 			node_ptr->port = slurm_conf.slurmd_port;
-		slurm_set_addr(&slurm_addr, node_ptr->port,
-			       node_ptr->comm_name);
-		if (slurm_get_port(&slurm_addr))
-			continue;
-		error("%s: failure on %s", __func__, node_ptr->comm_name);
-		node_ptr->node_state = NODE_STATE_FUTURE;
-		node_ptr->port = 0;
-		xfree(node_ptr->reason);
-		node_ptr->reason = xstrdup("NO NETWORK ADDRESS FOUND");
-		node_ptr->reason_time = time(NULL);
-		node_ptr->reason_uid = slurm_conf.slurm_user_id;
+		list_append(nodes_to_check, node_ptr);
 	}
+
+	for (int i = 0; i < threads_num; i++) {
+		slurm_thread_create(&work_threads[i], _check_node_addr,
+				    nodes_to_check);
+	}
+
+	for (int i = 0; i < threads_num; i++)
+		pthread_join(work_threads[i], NULL);
+
+	xassert(list_is_empty(nodes_to_check));
+	FREE_NULL_LIST(nodes_to_check);
 
 	END_TIMER2("_validate_slurmd_addr");
 #endif
