@@ -64,6 +64,7 @@ CONFIGURATION FILE CHANGES (see appropriate man page for details)
  -- Add InfluxDBTimeout parameter to acct_gather.conf.
  -- job_container/tmpfs - add support for expanding %h and %n in BasePath.
  -- slurm.conf - Removed SlurmctldPlugstack option.
+ -- Add CommunicationParameters=ValidateNodeaddrThreads
 
 COMMAND CHANGES (see man pages for details)
 ===========================================
